src/main/java/com/example/demo/error/ErrorResponseMessage.java
package com.example.demo.error;

import com.fasterxml.jackson.annotation.JsonInclude;

import java.time.LocalDateTime;
import java.time.format.DateTimeFormatter;
import java.util.HashMap;
import java.util.Map;
@JsonInclude(JsonInclude.Include.NON_NULL)
public class ErrorResponseMessage {

    private final int status;
    private final String message;
    private final String path;
    private final String timeStamp;

    private Map<String, String> validationErrors;

    public ErrorResponseMessage(int status, String message, String path) {
        this.status = status;
        this.message = message;
        this.path = path;
        this.timeStamp = formatDateTime(LocalDateTime.now());
    }

    public int getStatus() {
        return status;
    }

    public String getMessage() {
        return message;
    }

    public String getPath() {
        return path;
    }

    public String getTimeStamp() {
        return timeStamp;
    }

    public Map<String, String> getValidationErrors() {
        return validationErrors;
    }

    public void setValidationErrors(Map<String, String> validationErrors) {
        this.validationErrors = validationErrors;
    }

    static private String formatDateTime(LocalDateTime dateTime) {
        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");

        return dateTime.format(formatter);
    }
}
